# cdripper

./: .gitignore  CMakeLists.txt  Containerfile  README.md  cdripper-gui.sh  cli.cpp  config.example.ini  engine.cpp  engine.h  gui.cpp  gui.h  main.cpp  pipeline.cpp  pipeline.h  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
flatpak/: cdripper.appdata.xml  cdripper.desktop  io.github.gravey158.cdripper.yml
homebrew/: README.md
homebrew/Casks/: cdripper.rb
mac/: Info.plist.in  appcast.xml  cdripper.icns  sparkle_bridge.mm
scripts/: build-appimage.sh  build-flatpak.sh  build-mac.sh  build-msi.ps1  build-windows.ps1  fetch-cli-tools.ps1  fetch-sparkle.sh  publish-flatpak.sh  publish-mac-release.sh  publish-windows-release.ps1
tests/: tests.cpp
windows/: SETUP.md  cdripper.wxs
windows/winget/: Gravey158.cdripper.installer.yaml  Gravey158.cdripper.locale.en-US.yaml  Gravey158.cdripper.yaml
